--- a/paper/Ausarbeitung.tex
+++ b/paper/Ausarbeitung.tex
@@ -5,9 +5,9 @@
 % Version 2024-09-26
 
 % Hier Daten eintragen:
-\newcommand{\name}{Ihr Name}
-\newcommand{\modulname}{Name des Moduls}
-\newcommand{\thema}{Titel der Ausarbeitung}
+\newcommand{\name}{Tim Tomczek}
+\newcommand{\modulname}{Projekt KI}
+\newcommand{\thema}{Erstellung eines Trainingsdatensatzes für object detection mit echten und synthetischen Bildern}
 \newcommand{\hochschule}{Fachhochschule Südwestfalen}
 \newcommand{\datum}{\today}
 % Ende der Daten
@@ -40,5 +40,6 @@
 \tableofcontents
 \input{mainmatter}
 \printbibliography
+\include{appendix}
 \include{erklaerung}
 \end{document}
