echte bilder hinzugefügt

--- a/paper/Ausarbeitung.tex
+++ b/paper/Ausarbeitung.tex
@@ -23,6 +23,7 @@
 \usepackage{graphicx}
 \usepackage{scrhack}
 \usepackage{setspace}\setstretch{1.1}
+\usepackage{makecell}
 \parindent0pt\parskip6pt
 \clubpenalty=10000
 \widowpenalty=10000
@@ -37,7 +38,9 @@
 
 \begin{document}
 \maketitle
+\newpage
 \tableofcontents
+\newpage
 \input{mainmatter}
 \printbibliography
 \include{appendix}
