--- a/paper/literatur.bib
+++ b/paper/literatur.bib
@@ -16,3 +16,151 @@
   urldate       = {2020-07-13},
   url           = {http://www.scheme-reports.org/}
 }
+
+@online{coco2015,
+  author        = {COCO Consortium},
+  title         = {Common Objects in Context},
+  year          = {2015},
+  url           = {http://cocodataset.org},
+  urldate       = {2025-05-09},
+}
+
+@online{cvat2025,
+  author        = {CVAT.ai Corporation},
+  title         = {Computer Vision Annotation Tool},
+  year          = {2025},
+  url           = {https://www.cvat.ai/},
+  urldate       = {2025-05-09},
+}
+
+@online{labelimg2025,
+  author        = {HumanSignal, Inc},
+  title         = {Label Studio},
+  year          = {2025},
+  url           = {https://labelstud.io/},
+  urldate       = {2025-05-09},
+}
+
+@online{huggingface2025,
+  author        = {Hugging Face, Inc},
+  title         = {HuggingFace - The AI community building the future},
+  year          = {2025},
+  url           = {https://huggingface.co/},
+  urldate       = {2025-05-09},
+}
+
+@misc{von-platen-etal-2022-diffusers,
+  author = {Patrick von Platen and Suraj Patil and Anton Lozhkov and Pedro Cuenca and Nathan Lambert and Kashif Rasul and Mishig Davaadorj and Dhruv Nair and Sayak Paul and William Berman and Yiyi Xu and Steven Liu and Thomas Wolf},
+  title = {Diffusers: State-of-the-art diffusion models},
+  year = {2022},
+  publisher = {GitHub},
+  journal = {GitHub repository},
+  howpublished = {\url{https://github.com/huggingface/diffusers}}
+}
+
+@misc{hf-flux,
+  author        = {Black Forest Labs},
+  title         = {Hugging Face - FLUX.1-dev},
+  year          = {2025},
+  url           = {https://huggingface.co/black-forest-labs/FLUX.1-dev},
+  urldate       = {2025-05-15},
+}
+
+@misc{bfl-flux-announcement,
+  author        = {Black Forest Labs},
+  title         = {Announcing Black Forest Labs},
+  year          = {2024},
+  url           = {https://bfl.ai/announcements/24-08-01-bfl},
+  urldate       = {2025-05-15},
+}
+
+@misc{hf-memory-optimization,
+  author        = {Hugging Face, Inc},
+  title         = {Memory Optimization in Diffusers},
+  year          = {2025},
+  url           = {https://huggingface.co/docs/diffusers/optimization/memory},
+  urldate       = {2025-05-15},
+}
+
+@misc{esser2024scalingrectifiedflowtransformers,
+      title={Scaling Rectified Flow Transformers for High-Resolution Image Synthesis}, 
+      author={Patrick Esser and Sumith Kulal and Andreas Blattmann and Rahim Entezari and Jonas Müller and Harry Saini and Yam Levi and Dominik Lorenz and Axel Sauer and Frederic Boesel and Dustin Podell and Tim Dockhorn and Zion English and Kyle Lacey and Alex Goodwin and Yannik Marek and Robin Rombach},
+      year={2024},
+      eprint={2403.03206},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2403.03206}, 
+}
+
+@misc{podell2023sdxlimprovinglatentdiffusion,
+      title={SDXL: Improving Latent Diffusion Models for High-Resolution Image Synthesis}, 
+      author={Dustin Podell and Zion English and Kyle Lacey and Andreas Blattmann and Tim Dockhorn and Jonas Müller and Joe Penna and Robin Rombach},
+      year={2023},
+      eprint={2307.01952},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2307.01952}, 
+}
+
+@misc{rombach2022highresolutionimagesynthesislatent,
+      title={High-Resolution Image Synthesis with Latent Diffusion Models}, 
+      author={Robin Rombach and Andreas Blattmann and Dominik Lorenz and Patrick Esser and Björn Ommer},
+      year={2022},
+      eprint={2112.10752},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2112.10752}, 
+}
+
+@misc{cai2025hidreami1highefficientimagegenerative,
+      title={HiDream-I1: A High-Efficient Image Generative Foundation Model with Sparse Diffusion Transformer}, 
+      author={Qi Cai and Jingwen Chen and Yang Chen and Yehao Li and Fuchen Long and Yingwei Pan and Zhaofan Qiu and Yiheng Zhang and Fengbin Gao and Peihan Xu and Yimeng Wang and Kai Yu and Wenxuan Chen and Ziwei Feng and Zijian Gong and Jianzhuang Pan and Yi Peng and Rui Tian and Siyu Wang and Bo Zhao and Ting Yao and Tao Mei},
+      year={2025},
+      eprint={2505.22705},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/2505.22705}, 
+}
+
+@misc{lin2015microsoftcococommonobjects,
+      title={Microsoft COCO: Common Objects in Context}, 
+      author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+      year={2015},
+      eprint={1405.0312},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1405.0312}, 
+}
+
+@online{coco2015eval,
+  author        = {COCO Consortium},
+  title         = {Common Objects in Context - Metrics},
+  year          = {2015},
+  url           = {http://cocodataset.org/#detection-eval},
+  urldate       = {2025-05-15},
+}
+
+@misc{cocoannotator,
+  author = {Justin Brooks},
+  title = {{COCO Annotator}},
+  howpublished = "\url{https://github.com/jsbroks/coco-annotator/}",
+  year = {2019},
+}
+
+@misc{torchvisioncoco,
+  author = {Torch Contributors},
+  title = {torchvision - CocoDetection},
+  year = {2025},
+  url = {https://docs.pytorch.org/vision/main/generated/torchvision.datasets.CocoDetection.html},
+  urldate = {2025-06-07},
+}
+
+@misc{ren2016fasterrcnnrealtimeobject,
+      title={Faster R-CNN: Towards Real-Time Object Detection with Region Proposal Networks}, 
+      author={Shaoqing Ren and Kaiming He and Ross Girshick and Jian Sun},
+      year={2016},
+      eprint={1506.01497},
+      archivePrefix={arXiv},
+      primaryClass={cs.CV},
+      url={https://arxiv.org/abs/1506.01497}, 
+}
