--- a/paper/Ausarbeitung.tex
+++ b/paper/Ausarbeitung.tex
@@ -28,6 +28,7 @@
 \clubpenalty=10000
 \widowpenalty=10000
 \displaywidowpenalty=10000
+\usepackage{pgfgantt}
 
 \usepackage{listings}
 \renewcommand{\lstlistingname}{Listing}
